tweaks to styles for colleges to remove fixed and better align titles under images whether they are 1 or 2 lines

--- a/themes/nudev/src/__PRECOMP/sass/administration.scss
+++ b/themes/nudev/src/__PRECOMP/sass/administration.scss
@@ -1192,6 +1192,7 @@
        & > ul{
          // width: $content-width-wide;
          // margin: $gutter auto 0 auto;
+         margin: 10px auto 0 auto;
        //  border-bottom: solid rgba($brand_colors-grayW,1.0) 2px;
        border-bottom: none;
        //  flex-wrap: wrap;
