--- a/themes/nudev/src/__PRECOMP/sass/colleges.scss
+++ b/themes/nudev/src/__PRECOMP/sass/colleges.scss
@@ -28,7 +28,8 @@
        & > li{
          flex-grow: 1;
          flex-basis: 30%;
-         height: 310px;
+         // height: 310px;
+         height: auto;
          margin: 0 $gutter 0 0;
 
          &:nth-child(-n+6) {
@@ -56,6 +57,9 @@
               @include font-3b-l;
               @include action-arrow;
               @include action-arrow-hidden;
+              margin: 0 0 0 0;
+              // line-height: 1rem;
+              vertical-align: text-top;
             }
             &:hover{
               & > h4{
